fixed canvas blur on mobile

--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,8 @@ body {
 
 #canvas {
   display: inline-block;
-  min-height: 100vh;
-  max-width: 100vw;
+  height: 100vh;
+  width: 100vw;
   background-color: #222831;
 }
 
